Remove marvin, use generic terms

--- a/model_aggregator/static/index.html
+++ b/model_aggregator/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Marvin Models</title>
+  <title>Large Language Models</title>
   <style>
     body { font-family: system-ui, sans-serif; margin: 2em; }
     h1 { margin-bottom: 0.2em; }
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<h1>Marvin Model Catalog</h1>
+<h1>LLM Catalog</h1>
 <div id="updated">Loading…</div>
 <table id="tbl" style="display:none">
   <thead>
