--- a/model_aggregator/static/index.html
+++ b/model_aggregator/static/index.html
@@ -5,15 +5,45 @@
   <title>Large Language Models</title>
   <style>
     body { font-family: system-ui, sans-serif; margin: 2em; }
-    h1 { margin-bottom: 0.2em; }
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    h1 {
+      margin: 0;
+      font-size: 1.8em;
+    }
+    #ramBox {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+    #ramLabel {
+      font-size: 0.75em;
+      color: #666;
+      margin-bottom: 0.2em;
+    }
+    #statsData {
+      width: 150px;
+      height: 35px;
+    }
     #updated { font-size: 0.8em; color: #666; margin-bottom: 1em; }
     table { border-collapse: collapse; width: 100%; margin-top: 0.5em; }
     th, td { border-bottom: 1px solid #ddd; padding: 6px 8px; font-size: 0.9em; }
     th { background: #f0f0f0; text-align: left; }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-<h1>LLM Catalog</h1>
+<header>
+  <h1>LLM Catalog</h1>
+  <div id="ramBox">
+    <div id="ramLabel">RAM load %</div>
+    <canvas id="statsData"></canvas>
+  </div>
+</header>
+
 <div id="updated">Loading…</div>
 <table id="tbl" style="display:none">
   <thead>
@@ -26,37 +56,58 @@
   </thead>
   <tbody></tbody>
 </table>
-<script>
-async function load() {
-  const res = await fetch('/api/models');
-  const data = await res.json();       // now { "models": [...] }
-  const rows = data.models || [];
 
+<script>
+async function loadModels() {
+  const res = await fetch('/api/models');
+  const data = await res.json();
+  const rows = data.models || [];
   const tbody = document.querySelector('#tbl tbody');
   tbody.innerHTML = '';
-
   rows.forEach(row => {
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td>${row.id || ''}</td>
       <td>${row.server_port || ''}</td>
-      <td>${
-        Array.isArray(row.types)
-          ? row.types.join(', ')
-          : (row.types || '')
-      }</td>
-      <td>${row.summary || ''}</td>
-    `;
+      <td>${Array.isArray(row.types) ? row.types.join(', ') : (row.types || '')}</td>
+      <td>${row.summary || ''}</td>`;
     tbody.appendChild(tr);
   });
-
   document.getElementById('tbl').style.display = rows.length ? '' : 'none';
   document.getElementById('updated').textContent =
     'Last update: ' + new Date().toLocaleTimeString();
 }
+loadModels();
+setInterval(loadModels, 10000);
 
-load();
-setInterval(load, 60000);
+
+const ctx = document.getElementById('statsData').getContext('2d');
+const statsData = new Chart(ctx, {
+  type: 'line',
+  data: { labels: [], datasets: [{
+    data: [], borderWidth: 1, borderColor: '#0077cc',
+    backgroundColor: 'rgba(0,119,204,0.15)', tension: 0.3, fill: true, pointRadius: 0
+  }]},
+  options: {
+    animation: false,
+    scales: { x: { display: false }, y: { display: false, min: 0, max: 100 } },
+    plugins: { legend: { display: false }, tooltip: { enabled: false } },
+    elements: { line: { borderJoinStyle: 'round' } }
+  }
+});
+
+async function refreshStats() {
+  try {
+    const res = await fetch('/api/stats');
+    const data = await res.json();
+    statsData.data.labels = data.map((_, i) => i);
+    statsData.data.datasets[0].data = data;
+    statsData.update();
+  } catch (e) { console.warn('Stats chart fetch failed', e); }
+}
+setInterval(refreshStats, 5000);
+refreshStats();
+
 </script>
 </body>
 </html>
