Add more fields to enrich and output table

--- a/model_aggregator/static/index.html
+++ b/model_aggregator/static/index.html
@@ -50,11 +50,11 @@
 <header>
   <h1>LLM Catalog</h1>
   <div id="headerRight">
+    <button id="clearBtn">🧹 Recreate Info</button>
     <div id="ramBox">
       <div id="ramLabel">RAM load %</div>
       <canvas id="statsData"></canvas>
     </div>
-    <button id="clearBtn">🧹 Clear Data</button>
   </div>
 </header>
 
@@ -65,6 +65,10 @@
       <th>Model</th>
       <th>Port</th>
       <th>Types</th>
+      <th>Family</th>
+      <th>Context</th>
+      <th>Quant</th>
+      <th>Param</th>
       <th>Summary</th>
     </tr>
   </thead>
