--- a/model_aggregator/static/index.html
+++ b/model_aggregator/static/index.html
@@ -24,6 +24,9 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
+      border-style: solid;
+      border-width: 1px;
+      border-color: LightGray;
     }
     #ramLabel {
       font-size: 0.75em;
@@ -36,7 +39,7 @@
     }
     #clearBtn {
       font-size: 0.75em;
-      padding: 4px 8px;
+      padding: 0px 8px 0px 0px;
       cursor: pointer;
     }
     #updated { font-size: 0.8em; color: #666; margin-bottom: 1em; }
