--- a/llm_aggregator/static/index.html
+++ b/llm_aggregator/static/index.html
@@ -66,7 +66,7 @@
   <thead>
     <tr>
       <th>Model</th>
-      <th>Provider</th>
+      <th>Base URL</th>
       <th>Types</th>
       <th>Family</th>
       <th>Context</th>
