Add model files size to builtin UI

--- a/src/llm_aggregator/static/index.html
+++ b/src/llm_aggregator/static/index.html
@@ -32,6 +32,9 @@
       padding: 0px 8px 0px 0px;
       cursor: pointer;
     }
+    .num {
+      text-align: right;
+    }
     table { border-collapse: collapse; width: 100%; margin-top: 0.5em; }
     th, td { border-bottom: 1px solid #ddd; padding: 6px 8px; font-size: 0.9em; }
     th { background: #f0f0f0; text-align: left; }
@@ -66,6 +69,7 @@
       <th>Context</th>
       <th>Quant</th>
       <th>Param</th>
+      <th>Files Size</th>
       <th>Summary</th>
     </tr>
   </thead>
