Add endpoint for total RAM and show it on UI

--- a/src/llm_aggregator/static/index.html
+++ b/src/llm_aggregator/static/index.html
@@ -65,7 +65,7 @@
   </div>
   <div id="headerRight">
     <div id="ramBox">
-      <div id="ramLabel">RAM load %</div>
+      <div id="ramLabel">% RAM</div>
       <canvas id="statsData"></canvas>
     </div>
   </div>
